--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 <article>
     <header>
         <h1>{{ page.title }}</h1>
