--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,27 +1,9 @@
----
-layout: default
-title: Blog Posts
-permalink: /blog/
----
+/* assets/css/custom.css */
 
-# Blog Posts
-
-Welcome to my blog! Here you can find a list of all my recent posts.
-
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
-    </li>
-  {% endfor %}
-</ul>
-
-<style>
-
-  body {
-      font-family: 'Poppins', sans-serif;
+body {
+    font-family: 'Poppins', sans-serif;
   }
-
+  
   .main-content {
     text-align: center;
     margin-top: 50px;
@@ -35,7 +17,7 @@ Welcome to my blog! Here you can find a list of all my recent posts.
     text-align: center; /* Center the profile picture */
     margin-bottom: 20px; /* Space between the picture and the following content */
   }
-
+  
   .profile-picture img {
     width: 150px; /* Adjust as needed */
     height: 150px; /* Ensure the height matches the width for a perfect circle */
@@ -44,7 +26,7 @@ Welcome to my blog! Here you can find a list of all my recent posts.
     border: 4px solid #d3d3d3; /* Gray border */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Gray shadow */
   }
-
+  
   h1 {
     font-family: 'Lora', serif;
     font-size: 2.5em; /* Larger font size */
@@ -55,18 +37,18 @@ Welcome to my blog! Here you can find a list of all my recent posts.
     padding-bottom: 10px; /* Space between text and underline */
     letter-spacing: 1px; /* Slightly increase letter spacing */
   }
-
+  
   p {
     font-size: 1.1em;
   }
-
+  
   .follow-social-title {
     font-size: 1em;
     margin-top: 50px;
-   }
-
+  }
+  
   .social-icons img {
     margin: 0 5px;
     vertical-align: middle;
   }
-</style>
+  
