--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -52,3 +52,25 @@ body {
     vertical-align: middle;
   }
   
+
+  footer {
+    background-color: #f8f9fa;
+    padding: 20px 0;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  footer .social-icons {
+    margin-top: 10px;
+  }
+  
+  footer .social-icons a {
+    margin: 0 10px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  
+  footer .social-icons img {
+    width: 30px;
+    height: 30px;
+  }
