--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,3 +102,25 @@ header {
       display: block;
     }
   }
+
+  footer {
+    background-color: #f8f9fa;
+    padding: 20px 0;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  footer .social-icons {
+    margin-top: 10px;
+  }
+  
+  footer .social-icons a {
+    margin: 0 10px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  
+  footer .social-icons img {
+    width: 30px;
+    height: 30px;
+  }
