--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -708,11 +708,11 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   text-shadow: 1px 1px 3px #000;
 }
 .intro-header .page-heading h1 {
-  margin-top: 0;
-  font-size: 3.125rem;
+  margin-top: 1rem;
+  font-size: 2.5rem;
 }
 .intro-header .post-heading h1 {
-  margin-top: 0;
+  margin-top: 1rem;
   font-size: 2.1875rem;
 }
 .intro-header .page-heading .page-subheading,
@@ -772,7 +772,7 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
     font-size: 2.5rem;
   }
   .intro-header .post-heading h1 {
-    font-size: 2.5rem;
+    font-size: 2.1875rem;
   }
   .intro-header.big-img .img-desc {
     font-size: 0.875rem;
