--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -708,12 +708,12 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   text-shadow: 1px 1px 3px #000;
 }
 .intro-header .page-heading h1 {
-  margin-top: 1rem;
-  font-size: 2.5rem;
+  margin-top: 1rem !important;
+  font-size: 2.5rem !important;
 }
 .intro-header .post-heading h1 {
-  margin-top: 1rem;
-  font-size: 2.1875rem;
+  margin-top: 1rem !important;
+  font-size: 2.1875rem !important;
 }
 .intro-header .page-heading .page-subheading,
 .intro-header .post-heading .post-subheading {
