--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -752,8 +752,8 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
 }
 
 .intro-header .page-heading h1 {
-  margin-top: 1rem;
-  font-size: 2.5rem;
+  margin-top: 1rem !important;
+  font-size: 2.5rem !important;
 }
 
 @media (min-width: 1200px) {
