--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,8 @@ layout: page
 
 {{ content }}
 
+<hr class="small" />
+
 <div class="page-container">
   <div class="portfolio-gallery">
     {% assign sorted_projects = site.projects | sort: 'sort_order' | slice: 0, 3 %}
@@ -21,173 +23,137 @@ layout: page
       <p>No projects found.</p>
     {% endfor %}
   </div>
+  <br/>
   <hr class="small" />
 
   <div class="view-all-container">
-    <a href="/portfolio">View All Projects > </a>
+    <a href="/portfolio" class="view-all-button">View All Projects</a>
   </div>
 </div>
 
-<hr class="large" />
+<div class="posts-container">
+  <div class="posts-inner">
+    {% assign posts = paginator.posts | default: site.posts | slice: 0, 2 %}
 
-<div class="scroll-container">
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
+    <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
+    <ul class="posts-list" role="list">
+      {% for post in posts %}
+      <li class="post-preview">
+        <article>
+
+          {%- capture thumbnail -%}
+            {% if post.thumbnail-img %}
+              {{ post.thumbnail-img }}
+            {% elsif post.cover-img %}
+              {% if post.cover-img.first %}
+                {{ post.cover-img[0].first.first }}
+              {% else %}
+                {{ post.cover-img }}
+              {% endif %}
+            {% else %}
+            {% endif %}
+          {% endcapture %}
+          {% assign thumbnail=thumbnail | strip %}
+
+          {% if site.feed_show_excerpt == false %}
+          {% if thumbnail != "" %}
+          <div class="post-image post-image-normal">
+            <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+              <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
+            </a>
+          </div>
+          {% endif %}
+          {% endif %}
+
+          <a href="{{ post.url | absolute_url }}">
+            <h2 class="post-title">{{ post.title | strip_html }}</h2>
+
+            {% if post.subtitle %}
+              <h3 class="post-subtitle">
+              {{ post.subtitle | strip_html }}
+              </h3>
+            {% endif %}
+          </a>
+
+          {% if post.author %}
+            <span>By <strong>{{ post.author | strip_html }}</strong></span>
+          {% endif %}
+          <p class="post-meta">
+            {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
+            Posted on {{ post.date | date: date_format }}
+          </p>
+
+          {% if thumbnail != "" %}
+          <div class="post-image post-image-small">
+            <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+              <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
+            </a>
+          </div>
+          {% endif %}
+
+          {% unless site.feed_show_excerpt == false %}
+          {% if thumbnail != "" %}
+          <div class="post-image post-image-short">
+            <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+              <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
+            </a>
+          </div>
+          {% endif %}
+
+          <div class="post-entry">
+            {% assign excerpt_length = site.excerpt_length | default: 50 %}
+            {{ post.excerpt | strip_html | truncatewords: excerpt_length }}
+            {% assign excerpt_word_count = post.excerpt | number_of_words %}
+            {% if post.content != post.excerpt or excerpt_word_count > excerpt_length %}
+              <a href="{{ post.url | absolute_url }}" class="post-read-more">[Read&nbsp;More]</a>
+            {% endif %}
+          </div>
+          {% endunless %}
+
+          {% if site.feed_show_tags != false and post.tags.size > 0 %}
+          <div class="blog-tags">
+            <span>Tags:</span>
+            <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
+            <ul class="d-inline list-inline" role="list">
+              {% for tag in post.tags %}
+              <li class="list-inline-item">
+                <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+          {% endif %}
+
+        </article>
       </li>
-    {% endfor %}
-  </ul>
+      {% endfor %}
+    </ul>
+
+    {% if paginator.total_pages > 1 %}
+    <ul class="pagination main-pager">
+      {% if paginator.previous_page %}
+      <li class="page-item previous">
+        <a class="page-link" href="{{ paginator.previous_page_path | absolute_url }}">
+          <i class="fas fa-arrow-left" alt="Newer Posts"></i>
+          <span class="d-none d-sm-inline-block">Newer Posts</span>
+        </a>
+      </li>
+      {% endif %}
+      {% if paginator.next_page %}
+      <li class="page-item next">
+        <a class="page-link" href="{{ paginator.next_page_path | absolute_url }}">
+          <span class="d-none d-sm-inline-block">Older Posts</span>
+          <i class="fas fa-arrow-right" alt="Older Posts"></i>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+    {% endif %}
+  </div>
+  <br/>
+  <hr class="small" />
+  <div class="view-all-container">
+    <a href="/posts" class="view-all-button">View All Blogs</a>
+  </div>
 </div>
-<hr class="small" />
 
-<div class="view-all-container">
-  <a href="/posts" class="view-all-button">View All Blogs ></a>
-</div>
-
-
-<style>
-
-  .scroll-container {
-    overflow-x: auto;
-    white-space: nowrap;
-    padding: 10px 0;
-    display: flex;
-    justify-content: center; /* Center the content on larger screens */
-    margin-top: 30px; /* Space above the button */
-    width: 100%; /* Ensure it takes the full width of the parent */
-    box-sizing: border-box;
-  }
-  
-  .post-list {
-    display: inline-block;
-    padding: 0;
-    margin: 0 auto; /* Center the list itself */
-    list-style-type: none;
-    width: 100%; /* Allow the list to take full width for centering */
-    max-width: 1000px; /* Optional: set a max-width for larger screens */
-    text-align: center; /* Center-align the list items */
-  }
-  
-  .post-list li {
-    display: inline-block; /* Use inline-block to ensure full display */
-    margin: 0 10px; /* Adjust spacing between items */
-  }
-  
-  .post-list a {
-    text-decoration: none;
-    color: #007bff; /* Customize link color */
-  }
-
-  .view-all-container {
-    text-align: center; /* Center-align the button container */
-    margin-top: 20px; /* Space above the button */
-  }
-
-
-  .page-container {
-    position: relative;
-    box-sizing: border-box;
-    margin-top: 40px;
-  }
-  
-  .text-center {
-    text-align: center; /* Center-aligns the text */
-    margin-bottom: 30px; /* Optional: adds spacing below the text */
-  }
-  
-  .portfolio-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px; /* Space between items */
-    justify-content: center; /* Center-align items horizontally */
-  }
-  
-  .portfolio-item {
-    width: calc(20% - 30px); /* Adjusted width to account for the gap */
-    box-sizing: border-box;
-    overflow: hidden;
-    position: relative;
-    border: 1px solid #d3d3d3; /* Light grey border */
-    border-radius: 15px;
-  }
-  
-  .image-wrapper {
-    width: 100%;
-    height: 150px; /* Set a fixed height for the image wrapper, adjust as needed */
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .portfolio-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Ensures the image covers the entire container */
-    border-radius: 15px;
-  }
-  
-  .portfolio-description {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    padding: 14px;
-    box-sizing: border-box;
-    text-align: center;
-    height: 150px
-  }
-  
-  .portfolio-description h2 {
-    font-size: 0.9em; /* Responsive font size */
-    margin: 0; /* Remove default margin */
-    margin-top: 15px; /* Remove default margin */
-    margin-bottom: 20px; /* Remove default margin */
-    overflow: hidden; /* Hide overflowing text */
-    text-overflow: ellipsis; /* Add ellipsis if text overflows */
-    white-space: nowrap; /* Prevent text wrapping */
-  }
-  
-  .portfolio-description p {
-    font-size: clamp(0.8em, 1.5vw, 0.8em); /* Responsive font size */
-    margin: 0; /* Remove default margin */
-    overflow: hidden; /* Hide overflowing text */
-    display: -webkit-box;
-    -webkit-line-clamp: 2; /* Number of lines to show */
-    line-clamp: inherit;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis; /* Add ellipsis if text overflows */
-  }
-  
-  .portfolio-item a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  /* Media queries for responsive design */
-  @media (max-width: 768px) {
-    .portfolio-item {
-      width: calc(50% - 30px); /* 2 items per row on medium screens */
-    }
-  }
-  
-  @media (max-width: 480px) {
-    .portfolio-item {
-      width: calc(100% - 30px); /* 1 item per row on small screens */
-    }
-  }
-  
-  .view-all {
-    text-align: right;
-    margin-top: 20px; /* Adjust as needed */
-  }
-
-  .view-all a {
-    text-decoration: none;
-    color: #007bff; /* Customize the color as needed */
-    font-weight: bold;
-  }
-  
-  </style>
-  
