chore: update footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
         </p>
 
         {% unless site.remove-ads %}<p class="theme-by text-muted">
-          Crafted with 💻 & ☕ by Rajan Maharjan <span style="font-size: 2em;">🇳🇵</span>
+          Crafted with 💻 & ☕ by Rajan Maharjan <span style="font-size: 2em;">🇳🇵🇺🇸</span>
         </p>{% endunless %}
 
       </div>
