chore: enabled adsense

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,6 +39,11 @@
             class="text_muted">Edit page</a>
           {% endif%}
 
+          &nbsp;&bull;&nbsp;
+          <a href="{{ '/privacy-policy' | relative_url }}" class="text_muted">Privacy Policy</a>
+          &nbsp;&bull;&nbsp;
+          <a href="{{ '/terms-of-service' | relative_url }}" class="text_muted">Terms of Service</a>
+
         </p>
 
         {% unless site.remove-ads %}<p class="theme-by text-muted">
